RecordSet, BaseRTMPHandler - cleaned up if stmt RTMPProtocolEncoder, RTMPHandler - removed un-ness cast/obj creation RTMPClient - exchanged string literal for char literal - optimized AbstractIOTest - use valueOf instead of 'new' to reduce obj creation ScriptEngineTest - added jdk6 calls
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@1625 1b6495e4-3631-0410-8e05-8f51eee8b9cc